examples/test/testpolicy8009.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8009
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key18: value22
      key6: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value34
          key22: value7
      podSelector:
        matchLabels:
          key23: value8
